Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -11,13 +11,11 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">クリエイティブ・ビジュアライゼーションWS</h1>
-      <h2 class="project-tagline">2016年度前期講義(情報デザインコース&amp;メディア芸術コース共同開催)</h2>
-      <!--
+      <h1 class="project-name">Home</h1>
+      <h2 class="project-tagline">多摩美術大学クリエイティブ・ビジュアライゼーションWS</h2>
       <a href="https://github.com/CreativeVisualization/home" class="btn">View on GitHub</a>
       <a href="https://github.com/CreativeVisualization/home/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/CreativeVisualization/home/tarball/master" class="btn">Download .tar.gz</a>
-      -->
     </section>
 
     <section class="main-content">
@@ -27,11 +25,12 @@
 <p>2016年度前期講義(情報デザインコース&amp;メディア芸術コース共同開催)</p>
 
 <ul>
-<li>曜日：火曜日3〜4限 (田所)、土曜</li>
+<li>曜日：火曜日3〜4限 (田所)・土曜3〜4限 (山辺)</li>
 <li>担当：山辺真幸・田所 淳・永原康史・久保田晃弘</li>
-<li>教室：情報デザイン棟206 → デコースの教室も合せて</li>
+<li>教室：情報デザイン棟 25-206（田所）・25-319（山辺）</li>
 <li>定員：20名</li>
-<li>個人のコンピュータがある人は持参すること</li>
+<li>初回授業：4月12日（火）</li>
+<li>その他：個人のコンピュータがある人は持参すること</li>
 </ul>
 
 <h3>
