Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <p>2016年度前期講義(情報デザインコース&amp;メディア芸術コース共同開催)</p>
 
 <ul>
-<li>曜日：火曜日3〜4限 (田所)・土曜3〜4限 (山辺)</li>
+<li>曜日：火曜日3〜4限（田所）・土曜3〜4限（山辺）</li>
 <li>担当：山辺真幸・田所 淳・永原康史・久保田晃弘</li>
 <li>教室：情報デザイン棟 25-206（田所）・25-319（山辺）</li>
 <li>定員：20名</li>
